fix(mail(css)): add explicit expanded/collapsed mailbox status

--- a/UI/WebServerResources/scss/core/structure.scss
+++ b/UI/WebServerResources/scss/core/structure.scss
@@ -29,6 +29,10 @@ html * {
   }
 }
 
+.sg-opacity-70 {
+  opacity: .7;
+}
+
 .sg-category {
   position: absolute;
   top: 0;
